[gd_scene load_steps=3 format=3 uid="uid://dro5llfsjspeu"]

[ext_resource type="Script" path="res://Main.gd" id="1_q1xqe"]
[ext_resource type="PackedScene" uid="uid://r3c3otoh7g8p" path="res://world_tectonic_static.tscn" id="2_7qgxu"]

[node name="Main" type="Node"]
script = ExtResource("1_q1xqe")
WorldScene = ExtResource("2_7qgxu")

[node name="ConnectUI" type="Panel" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ConnectUI"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -33.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="HostButton" type="Button" parent="ConnectUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Host
"

[node name="JoinButton" type="Button" parent="ConnectUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Join"

[node name="SpawnPositions" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="MapInstance" type="Node" parent="."]
unique_name_in_owner = true

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("../SpawnPositions")
spawn_limit = 100

[connection signal="pressed" from="ConnectUI/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="ConnectUI/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
